<?xml version="1.0"?>
<package format="3">
  <name>go2_autoware_bridge</name>
  <version>0.0.1</version>
  <description>Bridge topics from Go2 Gazebo to Autoware Universe conventions.</description>
  <maintainer email="maintainer@example.com">go2_nav_humble</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
